--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Repaso Git</title>
-    <script src="./app.js" type="module"></script>
   </head>
-  <body></body>
+  <body>
+    <script src="./app.js" type="module"></script>
+  </body>
 </html>
