Deleted JS file

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <title>Repaso Git</title>
   </head>
   <body>
-    <script src="./app.js" type="module"></script>
+    <header>
+      <h1>Hello World</h1>
+      <p>This is a paragraph</p>
+    </header>
+    <main></main>
   </body>
 </html>
