Changed css properties

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Repaso Git</title>
   </head>
   <body>
-    <header>
-      <h1>Hello World</h1>
+    <header class="header">
+      <h1 class="title">Hello World</h1>
       <p>This is a paragraph</p>
     </header>
     <main></main>
